tests/files/type_checker_tests/should_fail/052.cmdr
//Should fail due to interpolated expression not evaluating to a string
x = $"My cool {true} string";